--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,31 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+ 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+    scroll-behavior: smooth;
+
+    background-image: radial-gradient(#000000 5%, #ffffff 5%);
+    background-position: 0 0;
+    background-size: 10px 10px; 
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.nav-link {
+  @apply: ml-3 hover:text-blue-700;
 }
 
-* {
-  box-sizing: border-box;
+.p-btn {
+  @apply mr-3 shadow-lg p-1 px-3 bg-blue-500 hover:bg-blue-600 text-white rounded-lg;
+}
+.title {
+  @apply text-gray-700 text-center text-xl font-medium mx-4 mt-5 lg:text-5xl;
+}
+.card {
+  @apply bg-white shadow-2xl rounded-lg overflow-hidden;
 }
