--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,10 +16,6 @@ body {
     background-size: 10px 10px; 
 }
 
-.nav-link {
-  @apply: ml-3 hover:text-blue-700;
-}
-
 .p-btn {
   @apply mr-3 shadow-lg p-1 px-3 bg-blue-500 hover:bg-blue-600 text-white rounded-lg;
 }
@@ -28,4 +24,11 @@ body {
 }
 .card {
   @apply bg-white shadow-2xl rounded-lg overflow-hidden;
+}
+
+.nav-item {
+  @apply ml-3 pt-2 p-1 border-b-4 border-transparent hover:text-blue-700 hover:border-blue-700
+}
+.active {
+  @apply text-blue-700 border-blue-700
 }
