transition added , animate once only after the page loads

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,31 @@ body {
 .card {
   @apply bg-white shadow-2xl rounded-lg overflow-hidden;
 }
+.rai-slide-in {
+  position: relative;
+  animation-name: rai-slide-in;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  /*top: 4rem;*/
+  transform: translateY(60px);
+  opacity: 0;
+}
+
+.animate-delay-1 {
+  animation-delay: 1s;
+}
+.animate-delay-2 {
+  animation-delay: 2s;
+}
+
+@keyframes rai-slide-in {
+  from {
+    opacity: 0;
+    transform: translateY(60px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
