--- a/styles/globals.css
+++ b/styles/globals.css
@@ -115,3 +115,20 @@ body {
     transform: translateY(0px);
   }
 }
+
+.fw-900 {
+  font-weight: 900;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.full-h-w-img{
+  img{
+    width: 100%;
+     height: 100%;
+  }
+}
